// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crop renders 0 1`] = `
Array [
  .c0 {
  crop: 0;
}

<div
    className="c0"
  />,
  .c0 {
  crop: 0;
}

<div
    className="c0"
  />,
  .c0 {
  crop: 0;
}

<div
    className="c0"
  />,
  .c0 {
  crop: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders function 1`] = `
Array [
  .c0 {
  crop: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  crop: has;
}

<div
    className="c0"
  />,
  .c0 {
  crop: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  crop: has;
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders invalid theme path 1`] = `
Array [
  .c0 {
  crop: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  crop: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  crop: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  crop: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders negative number 1`] = `
Array [
  .c0 {
  crop: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  crop: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  crop: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  crop: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    crop: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    crop: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    crop: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    crop: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    crop: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    crop: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    crop: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    crop: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    crop: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    crop: July;
  }
}

@media April {
  .c0 {
    crop: August;
  }
}

@media January {
  .c0 {
    crop: September;
  }
}

@media April {
  .c0 {
    crop: November;
  }
}

@media June {
  .c0 {
    crop: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    crop: July;
  }
}

@media April {
  .c0 {
    crop: August;
  }
}

@media January {
  .c0 {
    crop: September;
  }
}

@media April {
  .c0 {
    crop: November;
  }
}

@media June {
  .c0 {
    crop: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    crop: January;
  }
}

@media April {
  .c0 {
    crop: December;
  }
}

@media January {
  .c0 {
    crop: April;
  }
}

@media April {
  .c0 {
    crop: May;
  }
}

@media June {
  .c0 {
    crop: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    crop: January;
  }
}

@media April {
  .c0 {
    crop: December;
  }
}

@media January {
  .c0 {
    crop: April;
  }
}

@media April {
  .c0 {
    crop: May;
  }
}

@media June {
  .c0 {
    crop: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders postitive number 1`] = `
Array [
  .c0 {
  crop: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  crop: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  crop: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  crop: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders string 1`] = `
Array [
  .c0 {
  crop: July;
}

<div
    className="c0"
  />,
  .c0 {
  crop: July;
}

<div
    className="c0"
  />,
  .c0 {
  crop: June;
}

<div
    className="c0"
  />,
  .c0 {
  crop: June;
}

<div
    className="c0"
  />,
]
`;

exports[`crop renders valid theme path 1`] = `
Array [
  .c0 {
  crop: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  crop: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  crop: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  crop: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
